tests/paczka2/big_fuzzy/14968507.err
Error in line 2: S142 S142 25,4
Error in line 15: Xu0sU0L26z S436 306,6
Error in line 17: Xu0sU0L26z A612 -4,8
Error in line 7: TKw8m S619 70,8
Error in line 10: Zbb S619 28,9
Error in line 23: 3lThl S436 53,9
Error in line 25: Zbb A612 31,7
Error in line 16: Xu0sU0L26z A612 63,3
Error in line 31: zN69L3GKsnq S619 46,0
Error in line 51: 3lThl S619 26,1
Error in line 52: 3lThl S142 87,2
Error in line 56: Xu0sU0L26z S619 72,4
Error in line 65: 3lThl S142 15,2
Error in line 69: frNKFlnqP S619 13,1
Error in line 77: 3lThl A612 -3,2
Error in line 84: S142 A612 75,1
Error in line 90: zN69L3GKsnq S142 35,8
Error in line 95: S142 S619 51,9
Error in line 105: frNKFlnqP S619 51,87
Error in line 106: Xu0sU0L26z A612 23,7
Error in line 109: zN69L3GKsnq S619 29,6
Error in line 113: zN69L3GKsnq S436 32,5
Error in line 116: zN69L3GKsnq S619 17,9
Error in line 112: TKw8m S436 27,6
Error in line 117: zN69L3GKsnq A612 18,5
Error in line 118: TKw8m S619 39,8
Error in line 110: frNKFlnqP S619 214,6
Error in line 126: 3lThl S142 27,9
Error in line 131: zN69L3GKsnq A612 23,5
Error in line 143: 3lThl S619 99,0
Error in line 146: Xu0sU0L26z S142 470,2
Error in line 137: TKw8m S619 76,9
Error in line 159: zN69L3GKsnq S436 95,7
Error in line 160: zN69L3GKsnq S142 87,7
Error in line 170: zN69L3GKsnq S436 11,4
Error in line 178: zN69L3GKsnq S619 50,9
Error in line 184: S142 S142 3,8
Error in line 181: zN69L3GKsnq S436 70,1
Error in line 188: Xu0sU0L26z S142 38,3
Error in line 196: frNKFlnqP S619 93,2
Error in line 186: S142 A612 61,1
Error in line 164: 3lThl S142 245,9
Error in line 204: S142 S142 67,9
Error in line 219: Zbb S436 66,1
Error in line 221: Zbb S619 11,1
Error in line 237: Zbb A6z2 66,4
Error in line 241: Zbb A612 144,1
